--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vinted",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +18,7 @@
     "express-fileupload": "^1.4.1",
     "mongoose": "^7.6.2",
     "uid2": "^1.0.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
